fix image container and element spacing

--- a/css/style.css
+++ b/css/style.css
@@ -10,27 +10,38 @@ body{
 }
 h1{
 	display: inline;
+	margin-right: 48px;
 }
 .search{
 	width: 50vw; 
-	border: 1px solid rgb(230, 230, 230);
+	border: 1px solid white;
 	border-radius: 30px;
 	height: 24px;
 	padding: 8px;
 	font-style: italic;
 	font-size: 16px;
 }
+.search:hover{
+	border: 1px solid rgb(230, 230, 230);
+}
 img{
 	width: 200px;
 	height: 200px;
 	padding: 4px;
 }
+img:hover{
+	transform: scale(1.1)
+}
 .imagecontain{
+	border-radius:15px; 
+	overflow-y: scroll;
+	height: 75vh;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: flex-start;
 	background: whitesmoke;
-	width: 100%;
+	width: 98%;
 	margin:0 auto;
-	margin-top: 16px;
-	padding: 24px;
+	margin-top: 24px;
+	padding: 16px;
 }
